--- a/.gitignore
+++ b/.gitignore
@@ -428,7 +428,13 @@ chrome-profiler-events*.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
 .history/*
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 # misc
 /.sass-cache
